--- a/contact/contact.html
+++ b/contact/contact.html
@@ -10,20 +10,20 @@
   <legend>Contact Form</legend>
   <form name="frmContact" method="post" action="contact.php">
     <p>
-      <label for="Name">Name </label>
-      <input type="text" name="txtName" id="txtName">
+      <label for="Name">Your Name </label>
+      <input type="text" name="txtName" id="txtName" placeholder="Name">
     </p>
     <p>
-      <label for="email">Email</label>
-      <input type="text" name="txtEmail" id="txtEmail">
+      <label for="email">Your Email</label>
+      <input type="text" name="txtEmail" id="txtEmail" placeholder="Email">
     </p>
     <p>
-      <label for="phone">Phone</label>
-      <input type="text" name="txtPhone" id="txtPhone">
+      <label for="phone">Your Phone</label>
+      <input type="text" name="txtPhone" id="txtPhone" placeholder="Phone">
     </p>
     <p>
       <label for="message">Message</label>
-      <textarea name="txtMessage" id="txtMessage"></textarea>
+      <textarea name="txtMessage" id="txtMessage"  placeholder="Message"></textarea>
     </p>
     <p>&nbsp;</p>
     <p>
